--- a/student_intervention.ipynb
+++ b/student_intervention.ipynb
@@ -100,7 +100,7 @@
       "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
-      "Graduation rate of the class: 67.00%\n"
+      "Graduation rate of the class: 67.09%\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     "n_failed = n_students-n_passed\n",
     "\n",
     "# TODO: Calculate graduation rate\n",
-    "grad_rate = n_passed*100/n_students\n",
+    "grad_rate = float(n_passed)*100/n_students\n",
     "\n",
     "# Print the results\n",
     "print \"Total number of students: {}\".format(n_students)\n",
@@ -327,11 +327,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** Since this is a classification problem, the most appropriate models (and their general description) would be:\n",
+    "**Answer: ** Since this is a classification problem, the most appropriate models are explained below. The general applications of each model would be:\n",
     "\n",
-    "- *Support Vector Machines*: constructs a hyper-plane or set of hyper-planes in a high or infinite dimensional space, which can be used for classification, regression or other tasks.\n",
-    "- *Decision tree classifier*: creates a model that predicts the value of a target variable by learning simple decision rules inferred from the data features.\n",
-    "- *AdaBoost Classification*: Classifies the dataset and train the weights of classifier multiple times so as to focus more on difficult cases in the classification problem.\n",
+    "- *Support Vector Machines*: Due to its capability of handling large dimensions, SVM model is known to be used for a lot of purposes including texture classification, E-learning <a href=\"http://www.clopinet.com/SVM.applications.html\">(Source)</a> etc. because these problems have alot of features to be classified.\n",
+    "- *Decision tree classifier*: As the name suggets, decisions are made using a tree trained from the data provided. It is known to be used in game designing, for eg. chess moves can be classified into a tree and then the bot can make the move depending upon each turn played by the opponent.\n",
+    "- *AdaBoost Classification*: Mostly famous for its application in problems such as face detection. Its computational speed to calculate the objects with little features makes it right for such purposes.\n",
     "\n",
     "These models were chosen because in supervised learning, the classification on multiple features can be performed very well using these models. Taking into account their pros and cons, these models would be a perfect fit for this data-\n",
     " ### SVM-\n",
@@ -341,7 +341,14 @@
     " #### Decision tree learning algorithms generate decision trees from training data to approximate solutions to classification or regression problems. In the case of classification, trees are typically represented by a set of if-then rules culminating in a decision.  This model is very simple to understand and to interpret, it can also be visualised. It is able to handle both numerical and categorical data (for eg. our present dataset having a mixture of both) and it is able to handle multi-output problems. On the negative side, decision trees can be unstable because small variations in the data might result in a completely different tree being generated. Also, it is recommended to balance the dataset prior to fitting with the decision tree, since decision tree learners create biased trees if some classes dominate.\n",
     " \n",
     " ### AdaBoost-\n",
-    " #### The AdaBoost algorithm trains multiple weak classifiers on training data, and then combines those weak classifiers into a single boosted classifier. The combination is done through a weighted sum of the weak classifiers with weights dependent on the weak classifier accuracy. It supports both binary and multi-class classification (which is good for our present dataset). As the model iterates over data, samples that are difficult to predict receive ever-increasing influence, giving it an edge over other models. The shortcoming of the model is its scalability, caused by its sequential nature."
+    " #### The AdaBoost algorithm trains multiple weak classifiers on training data, and then combines those weak classifiers into a single boosted classifier. The combination is done through a weighted sum of the weak classifiers with weights dependent on the weak classifier accuracy. It supports both binary and multi-class classification (which is good for our present dataset). As the model iterates over data, samples that are difficult to predict receive ever-increasing influence, giving it an edge over other models. The shortcoming of the model is its scalability, caused by its sequential nature.\n",
+    " \n",
+    " ## Reasons for choosing these models for the given data-\n",
+    " Given the models above and applications, let's look at the data-\n",
+    " \n",
+    " - There are binary classifiers such as gender, internet access etc. having just two possible responses which make up for a good decision tree. The if-then rules might classify the students perfectly and help in finding out the major causes of failure. (Thereby predicting which students will fail and which won't.)\n",
+    " - The number of features (n_features) is 30, which can be considered a high number thus implying that there are many dimensions. The optimal model for classifying higher dimensions is SVM (as explained above).\n",
+    " - There are binary classifiers like gender, internet access etc. and multi-class classifiers such as Mjob, Fjob, family size etc.. It is possible that weak classifiers might be indirectly (for some psychological reasons) affecting the student's performance and thus other models might miss it. For these two reasons, AdaBoost is the optimal model."
    ]
   },
   {
@@ -580,9 +587,14 @@
     "**Answer: ** Assume you have a bunch of red and blue points on a cardboard. You are asked to draw a straight line to separate them. You look at the points and realize that there is no way this can happen because in order to separate all the points correctly, you will have to draw a squiggly line. \n",
     "\n",
     "Now you take a step back and see that you were looking at one face of a 3-dimensional cube. In this cube, you see that you can easily place a simple planar cardboard piece somewhere to separate the red and blue points (because they are at different depths). \n",
+    "![3D view](https://udacity-github-sync-content.s3.amazonaws.com/_imgs/372/1469379645/data_2d_to_3d_hyperplane.png)\n",
     "\n",
     "SVM relies on the fact that finding out the properties of that cardboard piece in the 3-dimensional cube is much easier than finding out the properties of that squiggly line in that 2-dimensional cardboard piece. So it just extracts the properties of that cardboard piece and projects it back to 2-dimensions. A simple plane in 3-dimensions will look like a squiggly line in 2-dimensions. This simple plane is called hyperplane.\n",
-    "Once this is done, the new data point is classified based on its distance from the plane that was just projected and which side of the plane it resides on."
+    "Once this is done, the next step is to maximise the distance of the margin juts plotted with the closest points to the margin. The margin is appropriately set so that the margin width is maximum (can be seen in the figure below)\n",
+    "\n",
+    "![Margin width](https://udacity-github-sync-content.s3.amazonaws.com/_imgs/372/1469379642/SVM_2.png)\n",
+    "\n",
+    "The data points lying on the margin are called support vectors and are the main focus of the model. Once these datapoints are at the maximum margin from the plotted line, the new data point is classified based on its distance from the line that was just projected and which side of the line it resides on. \n"
    ]
   },
   {
